--- a/about.yml
+++ b/about.yml
@@ -8,6 +8,7 @@ description: |
 
   Текст можно написать в несколько абзацев
 skills:
+  - Написание тест-кейсов
   - Функциональное тестирование
   - Написание багрепортов
   - Слепая печать
