--- a/test-cases.yml
+++ b/test-cases.yml
@@ -24,3 +24,20 @@
     - Нажимаем на кнопку "Следующая"
   expected-result: |
     Товары поменялись, страница при этом не перезагрузилась
+
+- summary: |
+    Краткое описание тест кейса. Пример: Проверка входа пользователя с существующими логином и паролем
+  requirement: |
+    Тестируемое требование. Например: При верном вводе логине и пароля пользователь должен войти в систему
+  prerequisites: |
+    Это условия, которые необходимы для проведения тест кейса. Они должны быть выполнены еще до запуска тест кейса.
+    Например: открыта страница логина
+  test-data: |
+    Тестовые данные
+    Логин = ilona Пароль = password
+  steps:
+    - Вводим логин
+    - Вводим пароль
+    - Нажимаем кнопку "Войти"
+  expected-result: |
+    Пользователь должен попасть на главную страницу
