--- a/requirements.yml
+++ b/requirements.yml
@@ -13,4 +13,4 @@ non-functional:
   - Сайт должен иметь мобильную версию
 implicit:
   - На странице корзины пользователь cможет удалить товар из корзины, продолжить выбирать товары в каталоге, оформить заказ с переходом на страницу оплаты
-  - Корзина будет хранится в сессии браузера
+  - Корзина будет храниться в сессии браузера
