--- a/test-cases.yml
+++ b/test-cases.yml
@@ -26,18 +26,15 @@
     Товары поменялись, страница при этом не перезагрузилась
 
 - summary: |
-    Краткое описание тест кейса. Пример: Проверка входа пользователя с существующими логином и паролем
+    Проверка возможности искать товары по ключевому слову
   requirement: |
-    Тестируемое требование. Например: При верном вводе логине и пароля пользователь должен войти в систему
+    При вводе названия или части названия товара он должен отображаться в списке
   prerequisites: |
-    Это условия, которые необходимы для проведения тест кейса. Они должны быть выполнены еще до запуска тест кейса.
-    Например: открыта страница логина
+    Открыта страница с товарами
   test-data: |
-    Тестовые данные
-    Логин = ilona Пароль = password
+    Язык страницы переключён на Russian
   steps:
-    - Вводим логин
-    - Вводим пароль
-    - Нажимаем кнопку "Войти"
+    - Нажимаем на поле ввода "Поиск"
+    - Вводим "apple"
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Пользователь должен видеть товар яблока "Apple"
