--- a/test-cases.yml
+++ b/test-cases.yml
@@ -5,7 +5,6 @@
     При нажатии кнопки "В корзину" под товаром он добавляется в корзину
   prerequisites: |
     Открыта страница с товарами
-  test-data: |
     Язык страницы переключён на Russian
   steps:
     - Нажимаем кнопку "В корзину" под любым товаром
@@ -18,7 +17,6 @@
     При перелистывании каталога с товарами страница не перезагружается
   prerequisites:
     Открыта страница с товарами
-  test-data: |
     Язык страницы переключён на Russian
   steps:
     - Нажимаем на кнопку "Следующая"
@@ -31,10 +29,21 @@
     При вводе названия или части названия товара он должен отображаться в списке
   prerequisites: |
     Открыта страница с товарами
-  test-data: |
     Язык страницы переключён на Russian
   steps:
     - Нажимаем на поле ввода "Поиск"
     - Вводим "apple"
   expected-result: |
     Пользователь должен видеть товар яблока "Apple"
+
+- summary: |
+    Проверка возможности просматривать содержимое корзины
+  requirement: |
+    При просмотре корзины должны отображаться добавленные товары
+  prerequisites: |
+   Открыта страница с товарами
+   Язык страницы переключён на Russian
+  steps:
+    - Нажимаем на "Корзину" в шапке страницы
+  expected-result: |
+    Пользователь должен видеть добавленные в корзину товары, их количество и стоимость
