--- a/test-cases.yml
+++ b/test-cases.yml
@@ -34,7 +34,7 @@
     - Нажимаем на поле ввода "Поиск"
     - Вводим "apple"
   expected-result: |
-    Пользователь должен видеть товар яблока "Apple"
+    В списке товаров отображаются только товары, которые содержат слово «Apple» в названии или кратком описании
 
 - summary: |
     Проверка возможности просматривать содержимое корзины
@@ -47,3 +47,17 @@
     - Нажимаем на "Корзину" в шапке страницы
   expected-result: |
     Пользователь должен видеть добавленные в корзину товары, их количество и стоимость
+
+- summary: |
+    Проверка возможности искать товары по категории
+  requirement: |
+    При выборе в выпадающем списке меню "Категория" той или иной категории, на странице с товарами будут отображаться только товары из выбранной категории
+  prerequisites: |
+   Открыта страница с товарами
+   Язык страницы переключён на Russian
+    steps:
+    - Нажимаем на "Категория"
+    - Выбираем "beauty"
+  expected-result: |
+    Пользователь должен видеть товары только из категории "beauty"
+
