--- a/test-cases.yml
+++ b/test-cases.yml
@@ -8,8 +8,9 @@
     Язык страницы переключён на Russian
   steps:
     - Нажимаем кнопку "В корзину" под любым товаром
+    - Нажимаем кнопку "Корзина" в шапке сайта
   expected-result: |
-    Пользователь должен увидеть цифру рядом корзиной в шапке сайта
+    Пользователь должен увидеть цифру рядом с корзиной в шапке сайта, затем зайти в корзину и увидеть там добавленный товар
 
 - summary: |
     Проверка магазина как SPA-приложения
