--- a/test-cases.yml
+++ b/test-cases.yml
@@ -62,3 +62,15 @@
   expected-result: |
     Пользователь должен видеть товары только из категории "beauty"
 
+- summary: |
+    Проверка возможности просматривать товары и просматривать подробную информацию о товаре
+  requirement: |
+    В каталоге с товарами отображаются товары и по нажатию на один из них можно увидеть подробную информацию
+  prerequisites: |
+   Открыта главная страница
+   Язык страницы переключён на Russian
+  steps:
+    - Заходим на главную страницу
+    - Нажимаем в списке товаров на "Cucumber"
+  expected-result: |
+    Пользователь должен видеть список товаров и по нажатию на "Cucumber" видеть его подробную информацию
