--- a/testing-report.yml
+++ b/testing-report.yml
@@ -15,6 +15,10 @@
     Проверка возможности просматривать содержимое корзины
   status: pass
 
-  - summary: |
+- summary: |
     Проверка возможности искать товары по категории
+  status: pass
+
+- summary: |
+    Проверка возможности просматривать товары и просматривать подробную информацию о товаре
   status: pass
