--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,12 +1,28 @@
 ---
 test-cases:
-  - summary: |
-      Проверка возможности искать товары по ключевому слову
-    status: pass
+- summary: |
+    Проверка добавления товара в корзину
+  status: pass
 
-  - summary: |
-      Проверка возможности искать товары по ключевому слову
-    status: fail
+- summary: |
+    Проверка магазина как SPA-приложения
+  status: pass
+
+- summary: |
+    Проверка возможности просматривать содержимое корзины
+  status: pass
+
+- summary: |
+    Проверка возможности искать товары по категории
+  status: pass
+
+- summary: |
+    Проверка возможности просматривать товары и просматривать подробную информацию о товаре
+  status: pass
+
+- summary: |
+    Проверка возможности искать товары по ключевому слову
+  status: fail
 
 bugreports:
   - summary: |
