--- a/test-cases.yml
+++ b/test-cases.yml
@@ -2,13 +2,13 @@
 - summary: |
     Проверка добавления товара в корзину
   requirement: |
-    При нажатии кнопки "В корзину" под товаром он добавляется в корзину
+    При нажатии кнопки В корзину под товаром он добавляется в корзину
   prerequisites: |
     Открыта страница с товарами
     Язык страницы переключён на Russian
   steps:
-    - Нажимаем кнопку "В корзину" под любым товаром
-    - Нажимаем кнопку "Корзина" в шапке сайта
+    - Нажимаем кнопку В корзину под любым товаром
+    - Нажимаем кнопку Корзина в шапке сайта
   expected-result: |
     Пользователь должен увидеть цифру рядом с корзиной в шапке сайта, затем зайти в корзину и увидеть там добавленный товар
 
@@ -20,7 +20,7 @@
     Открыта страница с товарами
     Язык страницы переключён на Russian
   steps:
-    - Нажимаем на кнопку "Следующая"
+    - Нажимаем на кнопку Следующая
   expected-result: |
     Товары поменялись, страница при этом не перезагрузилась
 
@@ -32,10 +32,10 @@
     Открыта страница с товарами
     Язык страницы переключён на Russian
   steps:
-    - Нажимаем на поле ввода "Поиск"
-    - Вводим "apple"
+    - Нажимаем на поле ввода Поиск
+    - Вводим apple
   expected-result: |
-    В списке товаров отображаются только товары, которые содержат слово «Apple» в названии или кратком описании
+    В списке товаров отображаются только товары, которые содержат слово apple в названии или кратком описании
 
 - summary: |
     Проверка возможности просматривать содержимое корзины
@@ -45,22 +45,22 @@
    Открыта страница с товарами
    Язык страницы переключён на Russian
   steps:
-    - Нажимаем на "Корзину" в шапке страницы
+    - Нажимаем на Корзину в шапке страницы
   expected-result: |
     Пользователь должен видеть добавленные в корзину товары, их количество и стоимость
 
 - summary: |
     Проверка возможности искать товары по категории
   requirement: |
-    При выборе в выпадающем списке меню "Категория" той или иной категории, на странице с товарами будут отображаться только товары из выбранной категории
+    При выборе в выпадающем списке меню Категория той или иной категории, на странице с товарами будут отображаться только товары из выбранной категории
   prerequisites: |
    Открыта страница с товарами
    Язык страницы переключён на Russian
     steps:
-    - Нажимаем на "Категория"
-    - Выбираем "beauty"
+    - Нажимаем на Категория
+    - Выбираем beauty
   expected-result: |
-    Пользователь должен видеть товары только из категории "beauty"
+    Пользователь должен видеть товары только из категории beauty
 
 - summary: |
     Проверка возможности просматривать товары и просматривать подробную информацию о товаре
@@ -71,6 +71,6 @@
    Язык страницы переключён на Russian
   steps:
     - Заходим на главную страницу
-    - Нажимаем в списке товаров на "Cucumber"
+    - Нажимаем в списке товаров на Cucumber
   expected-result: |
-    Пользователь должен видеть список товаров и по нажатию на "Cucumber" видеть его подробную информацию
+    Пользователь должен видеть список товаров и по нажатию на Cucumber видеть его подробную информацию
