--- a/test-cases.yml
+++ b/test-cases.yml
@@ -70,7 +70,7 @@
     Выбираем существующую категорию из списка   
   steps:
     - Нажимаем на "Категория"
-    - Выбираем "beauty"
+    - Нажимаем на "beauty"
   expected-result: |
     Пользователь должен видеть товары только из категории "beauty"
 
