--- a/test-cases.yml
+++ b/test-cases.yml
@@ -71,8 +71,9 @@
   steps:
     - Нажимаем на "Категория"
     - Нажимаем на "beauty"
+    - Нажимаем на "fragrances"
   expected-result: |
-    Пользователь должен видеть товары только из категории "beauty"
+    Пользователь должен видеть товары только из категории "beauty" при выборе данной категории, затем только из категории "fragrances"
 
 - summary: |
     Проверка возможности просматривать товары и просматривать подробную информацию о товаре
