--- a/test-cases.yml
+++ b/test-cases.yml
@@ -62,18 +62,16 @@
 - summary: |
     Проверка возможности искать товары по категории
   requirement: |
-    При выборе в выпадающем списке меню "Категория" той или иной категории, на странице с товарами будут отображаться только товары из выбранной категории
+    При выборе в выпадающем списке меню "Category" той или иной категории, на странице с товарами будут отображаться только товары из выбранной категории
   prerequisites: |
    Открыта страница с товарами
-   Язык страницы переключён на Russian
   test-data: |
     Выбираем существующую категорию из списка   
   steps:
-    - Нажимаем на "Категория"
-    - Нажимаем на "beauty"
-    - Нажимаем на "fragrances"
+    - Нажимаем на "Category"
+    - Выбираем в выпадающем списке меню "beauty"
   expected-result: |
-    Пользователь должен видеть товары только из категории "beauty" при выборе данной категории, затем только из категории "fragrances"
+    Пользователь должен видеть товары только из категории "beauty"
 
 - summary: |
     Проверка возможности просматривать товары и просматривать подробную информацию о товаре
