--- a/test-cases.yml
+++ b/test-cases.yml
@@ -62,16 +62,23 @@
 - summary: |
     Проверка возможности искать товары по категории
   requirement: |
-    При выборе в выпадающем списке меню "Category" той или иной категории, на странице с товарами будут отображаться только товары из выбранной категории
+    При выборе в выпадающем списке меню "Категория" той или иной категории, на странице с товарами будут отображаться только товары из выбранной категории
   prerequisites: |
    Открыта страница с товарами
+   Язык страницы переключён на Russian
   test-data: |
     Выбираем существующую категорию из списка   
   steps:
-    - Нажимаем на "Category"
+    - Нажимаем на "Категория"
     - Выбираем в выпадающем списке меню "beauty"
+    - Нажимаем на "Категория"
+    - Выбираем в выпадающем списке меню "fragrances"
+    - Нажимаем на "Категория"
+    - Выбираем в выпадающем списке меню "furniture"
+    - Нажимаем на "Категория"
+    - Выбираем в выпадающем списке меню "groceries"
   expected-result: |
-    Пользователь должен видеть товары только из категории "beauty"
+    Пользователь должен видеть товары только из выбранной категории
 
 - summary: |
     Проверка возможности просматривать товары и просматривать подробную информацию о товаре
