--- a/test-cases.yml
+++ b/test-cases.yml
@@ -70,13 +70,13 @@
     Выбираем существующую категорию из списка   
   steps:
     - Нажимаем на "Категория"
-    - Выбираем в выпадающем списке меню "beauty"
+    - Выбираем в выпадающем списке меню beauty
     - Нажимаем на "Категория"
-    - Выбираем в выпадающем списке меню "fragrances"
+    - Выбираем в выпадающем списке меню fragrances
     - Нажимаем на "Категория"
-    - Выбираем в выпадающем списке меню "furniture"
+    - Выбираем в выпадающем списке меню furniture
     - Нажимаем на "Категория"
-    - Выбираем в выпадающем списке меню "groceries"
+    - Выбираем в выпадающем списке меню groceries
   expected-result: |
     Пользователь должен видеть товары только из выбранной категории
 
