--- a/test-cases.yml
+++ b/test-cases.yml
@@ -4,93 +4,53 @@
   requirement: |
     При нажатии кнопки "В корзину" под товаром он добавляется в корзину
   prerequisites: |
-    Открыта страница с товарами
-    Язык страницы переключён на Russian
-    Корзина пуста
+    no-data
   test-data: |
-    Добавление одного товара в корзину   
+    no-data  
   steps:
     - Нажимаем кнопку "В корзину" под любым товаром
     - Нажимаем кнопку "Корзина" в шапке сайта
   expected-result: |
-    Пользователь должен увидеть цифру рядом с корзиной в шапке сайта при добавлении в корзину, затем зайти в корзину и увидеть там добавленный товар
+    Товар успешно добавлен и отображается в корзине
 
 - summary: |
-    Проверка магазина как SPA-приложения
-  requirement: |
-    При перелистывании каталога с товарами страница не перезагружается
-  prerequisites:
-    Открыта страница с товарами
-    Язык страницы переключён на Russian
-  test-data: |
-    Переключаем страницу    
-  steps:
-    - Нажимаем на кнопку "Следующая"
-  expected-result: |
-    Товары поменялись, страница при этом не перезагрузилась
-
-- summary: |
-    Проверка возможности искать товары по ключевому слову
+    Проверка поиска товаров по ключевому слову
   requirement: |
     При вводе названия или части названия товара он должен отображаться в списке
   prerequisites: |
-    Открыта страница с товарами
-    Язык страницы переключён на Russian
+    no-data
   test-data: |
-    Вводим существующий в каталоге товар    
+    no-data    
   steps:
     - Нажимаем на поле ввода "Поиск"
-    - Вводим "apple"
+    - Вводим любое слово, например "bed"
   expected-result: |
-    В списке товаров отображаются только товары, которые содержат слово «Apple» в названии или кратком описании
+    В списке товаров отображаются товары согласно введённого запроса
 
 - summary: |
-    Проверка возможности просматривать содержимое корзины
-  requirement: |
-    При просмотре корзины должны отображаться добавленные товары
-  prerequisites: |
-   Открыта страница с товарами
-   Язык страницы переключён на Russian
-   Товары добавлены в корзину
-  test-data: |
-    Проверяем корзину с добавленными товарами   
-  steps:
-    - Нажимаем на "Корзину" в шапке страницы
-  expected-result: |
-    Пользователь должен видеть добавленные в корзину товары, их количество и стоимость
-
-- summary: |
-    Проверка возможности искать товары по категории
+    Проверка поиска товара по категории
   requirement: |
     При выборе в выпадающем списке меню "Категория" той или иной категории, на странице с товарами будут отображаться только товары из выбранной категории
   prerequisites: |
-   Открыта страница с товарами
-   Язык страницы переключён на Russian
+    no-data
   test-data: |
-    Выбираем существующую категорию из списка   
+    no-data   
   steps:
     - Нажимаем на "Категория"
-    - Выбираем в выпадающем списке меню beauty
-    - Нажимаем на "Категория"
-    - Выбираем в выпадающем списке меню fragrances
-    - Нажимаем на "Категория"
-    - Выбираем в выпадающем списке меню furniture
-    - Нажимаем на "Категория"
-    - Выбираем в выпадающем списке меню groceries
+    - Выбираем в выпадающем списке меню категорию, например - beauty
   expected-result: |
-    Пользователь должен видеть товары только из выбранной категории
+    Отображаются товары выбранной категории
 
 - summary: |
-    Проверка возможности просматривать товары и просматривать подробную информацию о товаре
+    Проверка открытия карточки товара
   requirement: |
     В каталоге с товарами отображаются товары и по нажатию на один из них можно увидеть подробную информацию
   prerequisites: |
-   Открыта главная страница
-   Язык страницы переключён на Russian
+    no-data
   test-data: |
-    Выбираем существующий товар в каталоге   
+    no-data   
   steps:
-    - Заходим на главную страницу
-    - Нажимаем в списке товаров на "Cucumber"
+    - Выбрать любой товар
+    - Открыть выбранный товар
   expected-result: |
-    Пользователь должен видеть список товаров и по нажатию на "Cucumber" видеть его подробную информацию
+    Открыта карточка товара
