--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,12 +1,11 @@
 ---
 - summary: |
-    Нельзя сбросить выбор категории при поиске
+    Нельзя сбросить выбор категории поиска товаров
   environment: |
     Google Chrome 131.0.6778.205 (Официальная сборка), (64 бит)
     ОС Windows 10
   steps-to-reproduce: |
-    1. Зайти на страницу https://hexlet-products-store.vercel.app/
-    2. Нажать на выпадающее меню слева "Category"
+    1. Нажать на выпадающее меню слева "Category"
     3. Выбрать beauty
     4. Попробовать сбросить выбор
   expected-result: |
@@ -20,13 +19,12 @@
     Google Chrome 131.0.6778.205 (Официальная сборка), (64 бит)
     ОС Windows 10
   steps-to-reproduce: |
-    1. Зайти на страницу https://hexlet-products-store.vercel.app/
-    2. Нажать на выпадающее меню справа в шапке сайта "Language"
+    1. Нажать на выпадающее меню справа в шапке сайта "Language"
   expected-result: |
     Рядом с выбираемыми языками отображается иконка (по одной возле каждого языка)
   actual-result: |
     Возле английского языка (English) нет иконки
-    Ошибка изображена на hexlet-products-store.language1.png
+    Ошибка изображена на Screenshots/hexlet-products-store.language1.png
 
 - summary: |
     При смене языка страницы на русский (Russian) не происходит полного перевода страницы, лишь некоторых пунктов
@@ -34,23 +32,21 @@
     Google Chrome 131.0.6778.205 (Официальная сборка), (64 бит)
     ОС Windows 10
   steps-to-reproduce: |
-    1. Зайти на страницу https://hexlet-products-store.vercel.app/
-    2. Нажать на выпадающее меню справа в шапке сайта "Language"
+    1. Нажать на выпадающее меню справа в шапке сайта "Language"
     3. Выбрать "Russian"
   expected-result: |
     Будет переведена страница полностью на русский, исключая имена собственные (бренды)
   actual-result: |
     Не вся страница переведена на русский язык
-    Ошибка изображена на hexlet-products-store.language.png
+    Ошибка изображена на Screenshots/hexlet-products-store.language.png
 
 - summary: |
-    При оформлении заказа товар из корзины не очищается
+    Не работает автоматическая очистка корзины при успешном оформлении заказа
   environment: |
     Google Chrome 131.0.6778.205 (Официальная сборка), (64 бит)
     ОС Windows 10
   steps-to-reproduce: |
-    1. Зайти на страницу https://hexlet-products-store.vercel.app/
-    2. Выбираем любой товар
+    1. Выбираем любой товар
     3. Добавляем этот товар в корзину
     4. Переходим в корзину
     5. Нажимаем "Оформить заказ"
@@ -58,16 +54,14 @@
     Видим окно, что заказ успешно формлен и корзина очищается
   actual-result: |
     Корзина остаётся с тем же товаром
-    В консоли браузера в Devtools выводится ошибка 500
 
 - summary: |
-    После очищения корзины при обновлении страницы в корзине снова появляются удалённые ранее товары
+    Отображается удаленный товар в корзине при обновлении страницы
   environment: |
     Google Chrome 131.0.6778.205 (Официальная сборка), (64 бит)
     ОС Windows 10
   steps-to-reproduce: |
-    1. Зайти на страницу https://hexlet-products-store.vercel.app/
-    2. Выбираем любой товар
+    1. Выбираем любой товар
     3. Добавляем этот товар в корзину
     4. Переходим в корзину
     5. Нажимаем "Очистить корзину"
@@ -76,3 +70,18 @@
     Корзина очищена
   actual-result: |
     Корзина остаётся с тем же товаром, что был перед очисткой
+
+- summary: |
+    Ошибка сервера 500 при оформлении заказа
+  environment: |
+    Google Chrome 131.0.6778.205 (Официальная сборка), (64 бит)
+    ОС Windows 10
+  steps-to-reproduce: |
+    1. Выбираем любой товар
+    3. Добавляем этот товар в корзину
+    4. Переходим в корзину
+    5. Нажимаем "Оформить заказ"
+  expected-result: |
+    Заказ оформлен успешно, без серверных ошибок
+  actual-result: |
+    Видим в devtools в панели "Сеть" сверверную ошибку 500
