--- a/test-cases.yml
+++ b/test-cases.yml
@@ -2,14 +2,14 @@
 - summary: |
     Проверка добавления товара в корзину
   requirement: |
-    При нажатии кнопки "В корзину" под товаром он добавляется в корзину
+    При нажатии кнопки "Add to cart" под товаром он добавляется в корзину
   prerequisites: |
     no-data
   test-data: |
     no-data  
   steps:
-    - Нажимаем кнопку "В корзину" под любым товаром
-    - Нажимаем кнопку "Корзина" в шапке сайта
+    - Нажимаем кнопку "Add to cart" под любым товаром
+    - Нажимаем кнопку "Cart" в шапке сайта
   expected-result: |
     Товар успешно добавлен и отображается в корзине
 
@@ -22,7 +22,7 @@
   test-data: |
     no-data    
   steps:
-    - Нажимаем на поле ввода "Поиск"
+    - Нажимаем на поле ввода "Search"
     - Вводим любое слово, например "bed"
   expected-result: |
     В списке товаров отображаются товары согласно введённого запроса
@@ -30,13 +30,13 @@
 - summary: |
     Проверка поиска товара по категории
   requirement: |
-    При выборе в выпадающем списке меню "Категория" той или иной категории, на странице с товарами будут отображаться только товары из выбранной категории
+    При выборе в выпадающем списке меню "Category" той или иной категории, на странице с товарами будут отображаться только товары из выбранной категории
   prerequisites: |
     no-data
   test-data: |
     no-data   
   steps:
-    - Нажимаем на "Категория"
+    - Нажимаем на "Category"
     - Выбираем в выпадающем списке меню категорию, например - beauty
   expected-result: |
     Отображаются товары выбранной категории
@@ -54,3 +54,70 @@
     - Открыть выбранный товар
   expected-result: |
     Открыта карточка товара
+
+- summary: |
+    Проверка фильтра по цене
+  requirement: |
+    При выборе диапазона цен, будут отображаться товары из этой ценовой категории
+  prerequisites: |
+    no-data
+  test-data: |
+    no-data   
+  steps:
+    - Ввести в поле Price From - 10
+    - Ввести в поле Price To - 1000
+  expected-result: |
+    Отображаются товары в выбранном ценовом диапазоне
+
+- summary: |
+    Проверка поиска товаров по бренду
+  requirement: |
+    При выборе бренда отображаются товары только выбранного бренда
+  prerequisites: |
+    no-data
+  test-data: |
+    no-data   
+  steps:
+    - В категории "Brand" выбрать любой бренд, например Dior
+  expected-result: |
+    Отображаются товары выбранного бренда
+
+- summary: |
+    Проверка перелистывания страниц с товарами
+  requirement: |
+    При перелистывании страниц меняются товары на ней
+  prerequisites: |
+    no-data
+  test-data: |
+    no-data   
+  steps:
+    - Нажимаем на "Next"
+  expected-result: |
+    Страница перелистывается, а товары на ней меняются
+
+- summary: |
+    Проверка товаров по наличию
+  requirement: |
+    Чекбокс "In stock" должен отображать товары, которые есть в наличии
+  prerequisites: |
+    no-data
+  test-data: |
+    no-data   
+  steps:
+    - Убираем галку с чекбокса "In Stock"
+  expected-result: |
+    При нажатом чекбоксе "In Stock" видим товары в наличии, при отключённом - товары, которых нет (0)
+
+- summary: |
+    Проверка переключения языка
+  requirement: |
+    Язык страницы меняется на выбранный
+  prerequisites: |
+    no-data
+  test-data: |
+    no-data   
+  steps:
+    - В шапке страницы нажимаем на "Language"
+    - Выбираем любой язык, например "Russian"
+  expected-result: |
+    Страница должна перевестись на выбранный язык (не считая имён собственных, например названий брендов)   
