--- a/test-cases.yml
+++ b/test-cases.yml
@@ -56,7 +56,7 @@
     Открыта карточка товара
 
 - summary: |
-    Проверка фильтра по цене
+    Проверка фильтра поиска по цене
   requirement: |
     При выборе диапазона цен, будут отображаться товары из этой ценовой категории
   prerequisites: |
