--- a/test-cases.yml
+++ b/test-cases.yml
@@ -109,7 +109,7 @@
     При нажатом чекбоксе "In Stock" видим товары в наличии, при отключённом - товары, которых нет (0)
 
 - summary: |
-    Проверка переключения языка
+    Проверка переключения языка страницы
   requirement: |
     Язык страницы меняется на выбранный
   prerequisites: |
