--- a/testing-report.yml
+++ b/testing-report.yml
@@ -4,21 +4,33 @@
   status: pass
 
 - summary: |
-    Проверка магазина как SPA-приложения
+    Проверка поиска товаров по ключевому слову
   status: pass
 
 - summary: |
-    Проверка возможности искать товары по ключевому слову
+    Проверка поиска товара по категории
   status: pass
 
 - summary: |
-    Проверка возможности просматривать содержимое корзины
+    Проверка открытия карточки товара
   status: pass
 
 - summary: |
-    Проверка возможности искать товары по категории
+    Проверка фильтра поиска по цене
   status: pass
 
 - summary: |
-    Проверка возможности просматривать товары и просматривать подробную информацию о товаре
+    Проверка поиска товаров по бренду
   status: pass
+
+- summary: |
+    Проверка перелистывания страниц с товарами
+  status: pass
+
+- summary: |
+    Проверка товаров по наличию
+  status: pass
+
+- summary: |
+    Проверка переключения языка страницы
+  status: fail
