--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,27 +1,38 @@
 ---
-test-cases:
 - summary: |
     Проверка добавления товара в корзину
   status: pass
 
 - summary: |
-    Проверка магазина как SPA-приложения
+    Проверка поиска товаров по ключевому слову
+  status: fail
+
+- summary: |
+    Проверка поиска товара по категории
   status: pass
 
 - summary: |
-    Проверка возможности просматривать содержимое корзины
+    Проверка открытия карточки товара
   status: pass
 
 - summary: |
-    Проверка возможности искать товары по категории
+    Проверка фильтра поиска по цене
   status: pass
 
 - summary: |
-    Проверка возможности просматривать товары и просматривать подробную информацию о товаре
+    Проверка поиска товаров по бренду
   status: pass
 
 - summary: |
-    Проверка возможности искать товары по ключевому слову
+    Проверка перелистывания страниц с товарами
+  status: pass
+
+- summary: |
+    Проверка товаров по наличию
+  status: fail
+
+- summary: |
+    Проверка переключения языка страницы
   status: fail
 
 bugreports:
@@ -31,13 +42,12 @@ bugreports:
       Google Chrome 131.0.6778.205 (Официальная сборка), (64 бит)
       ОС Windows 10
     steps-to-reproduce: |
-      1. Зайти на страницу https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
-      2. Нажать на выпадающее меню слева "Category"
-      3. Выбрать beauty
-      4. Сбросить выбор категории (выбрать пустую категорию)
-      5. Ввести в поиск "cucumber"
+      1. Нажать на выпадающее меню слева "Category"
+      2. Выбрать любую категорию, например "beauty"
+      3. Сбросить выбор категории (выбрать пустую категорию)
+      4. Ввести в поиск любое слово, например "cucumber"
     expected-result: |
-      В списке товаров отображаются только товары, которые содержат слово «cucumber» в названии или кратком описании
+      В списке товаров отображаются только товары согласно введённого запроса
     actual-result: |
-      Поиск не работает, никак не меняется список товаров при вводе слова "cucumber"
-      Ошибка изображена на search.png
+      Поиск не работает, никак не меняется список товаров при вводе слова
+      Ошибка изображена на Screenshots/search.png
