--- a/regress-report.yml
+++ b/regress-report.yml
@@ -51,3 +51,17 @@ bugreports:
     actual-result: |
       Поиск не работает, никак не меняется список товаров при вводе слова
       Ошибка изображена на Screenshots/search.png
+      
+- summary: |
+      Не работает сортировка товаров по наличию
+    environment: |
+      Google Chrome 131.0.6778.205 (Официальная сборка), (64 бит)
+      ОС Windows 10
+    steps-to-reproduce: |
+      1. Снять галку с чекбокса "In stock"
+      2. Поставить галку в чекбоксе "In stock"
+    expected-result: |
+      При снятой галке отображаются товары, которых нет в наличии (0), при поставленной галке отображаются товары, которые в наличии
+    actual-result: |
+      Список товаров не меняется при смене чекбокса "In stock"
+      Ошибка изображена на Screenshots/instock.png
